[project]
name = "physio"
version = "0.2.0"
authors = [
  { name="Samuel Garcia", email="sam.garcia.die@gmail.com" },
]
description = "Simple python toolbox to analyse physio signals (respi and ECG)"
readme = "README.md"
requires-python = ">=3.8,<4.0"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent"
]


dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "neo",
    "tqdm",
]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["."]
include = ["physio*"]
namespaces = false
exclude = ["physio.*.tests"]


[project.urls]
homepage = "https://physio.readthedocs.io"
repository = "https://github.com/samuelgarcia/physio"

[project.optional-dependencies]

test = [
    "pytest",
    "matplotlib",
]

docs = [
    "matplotlib",
    "sphinx-gallery",
    "sphinx_rtd_theme",
    "numpydoc",
]

